--- a/GONG/style.css
+++ b/GONG/style.css
@@ -16,3 +16,7 @@ canvas {
     display: block;
     margin: 0 auto;
 }
+
+#layer1, #layer2, #layer3, #layer4, #player, #angler1, #angler2, #lucky {
+display: none;
+}
