--- a/GONG/style.css
+++ b/GONG/style.css
@@ -15,8 +15,9 @@ canvas {
     max-height: 100%;
     display: block;
     margin: 0 auto;
+    font-family: "Rubik", sans-serif;
 }
 
-#layer1, #layer2, #layer3, #layer4, #player, #angler1, #angler2, #lucky {
+#layer1, #layer2, #layer3, #layer4, #player, #angler1, #angler2, #lucky, #projectile, #gears, #smokeExplosion, #fireExplosion {
 display: none;
 }
